# primetrade_ai

./: README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/v1/: admin.py  auth.py  tasks.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/crud/: __init__.py  task.py  user.py
backend/app/db/: __init__.py  database.py  indices.py
backend/app/middleware/: __init__.py  role_guard.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/schemas/: auth.py  task.py  user.py
backend/app/services/: __init__.py  token.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  css-modules.d.ts  main.tsx  vite-env.d.ts
frontend/src/components/: ModeToggle.tsx  TaskForm.tsx  TaskList.tsx  TaskListSkeleton.tsx  ThemeProvider.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Dialog.tsx  DropdownMenu.tsx  Input.tsx  Label.tsx  Select.tsx  Skeleton.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx  RegisterPage.tsx  TasksPage.tsx
frontend/src/routes/: AdminRoute.tsx  ProtectedRoute.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: axios.ts
